--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Yohana Gambarini # your name (or website title) here
 logo: "/images/Screenshot 2023-06-09 121056.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Data Analyst 
+  Data Analyst <br><br>
   
   <a href="https://www.linkedin.com/in/yohanagambarini/">View My LinkedIn Profile</a> 
   
