--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,18 @@
 title: Yohana Gambarini # your name (or website title) here
+
 logo: "/images/Screenshot 2023-06-09 121056.png?raw=true" # your photo (or logo) here
+
 description: > # your text below (remove <br> elements if you don't need line breaks)
+
   Data Analyst <br><br>
+
+  I am passionate about turning raw data into usable knowledge. 
   
+  I can invest my whole day collecting, cleaning, processing and finally presenting data in a why that peopl will easily understand!
+  I love the process and dig for solutions.
+     
   <a href="https://www.linkedin.com/in/yohanagambarini/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
+
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
