--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,9 @@ description: > # your text below (remove <br> elements if you don't need line br
 
   I am passionate about turning raw data into usable knowledge. 
   
-  I can invest my whole day collecting, cleaning, processing and finally presenting data in a why that peopl will easily understand!
-  I love the process and dig for solutions.
+  I can invest my whole day collecting, cleaning, processing and finally presenting data in a why that people will easily understand!
+  
+    
      
   <a href="https://www.linkedin.com/in/yohanagambarini/">View My LinkedIn Profile</a> 
   
