--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ description: > # your text below (remove <br> elements if you don't need line br
 
   Data Analyst <br><br>
 
+  Skills: Excel, Power BI, SQL, Tableau
+
   I am passionate about turning raw data into usable knowledge. 
   
   
