--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   I am passionate about turning raw data into usable knowledge. 
   
   
-  I can invest my whole day collecting, cleaning, processing and finally presenting data in a why that people will easily understand!
+  I can invest my whole day collecting, cleaning, processing and finally presenting data in a way that people will easily understand!
   
 
     
